microk8s/manifests/init-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-db
spec:
  containers:
    - name: init-db
      image: mysql:8.0
      command: ["sh", "-c", "echo 'CREATE DATABASE IF NOT EXISTS mydb;' | mysql -u root --password=$MYSQL_ROOT_PASSWORD"]
      restartPolicy: Never
  restartPolicy: Never
