microk8s/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: adafww/pet-project:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-publog
spec:
  tls:
    - hosts:
        - pet-projects.ddns.net
      secretName: backend-ingress-tls
  rules:
    - host: pet-projects.ddns.net
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  name: http
            path: /
            pathType: Exact
